Убрал Collections.singletonList